Fix scrollbar styling
Add the correct background colour, padding and size to the default
style

--- a/data/style/default.css
+++ b/data/style/default.css
@@ -16,6 +16,18 @@ NbtkButton:active
   border-image: url("file://button-active.png") 10;
 }
 
+NbtkScrollBar
+{
+  background-color: #dee2e5;
+  padding: 2px;
+}
+
+NbtkScrollView
+{
+  scrollbar-width: 22;
+  scrollbar-height: 22;
+}
+
 NbtkScrollButton#backward-stepper
 {
   border-image: url("file://scroll-button-up.png") 5;
@@ -38,12 +50,12 @@ NbtkScrollButton#forward-stepper:active
   border-image: url("file://scroll-button-down-hover.png") 5;
 }
 
-NbtkScrollBar *#handle
+NbtkScrollBar NbtkButton#handle
 {
   border-image: url("file://scroll-handle.png") 5;
 }
 
-NbtkScrollBar *#handle:hover
+NbtkScrollBar NbtkButton#handle:hover
 {
   border-image: url("file://scroll-handle-hover.png") 5;
 }
